<resources>
    <string name="app_name">Cars</string>
    <string name="heading">Get a Car?</string>
    <string name="car_button">Find</string>
    <string name="toggle_on">terrestrial</string>
    <string name="toggle_off">extraterrestrial</string>
    <string-array name="Types">
        <item>Sedan</item>
        <item>MPV</item>
        <item>SUV</item>
        <item>Sports</item>
        <item>Space</item>
    </string-array>
    <string name="radio1">$</string>
    <string name="radio2">$$</string>
    <string name="radio3">$$$</string>
    <string name="american">American</string>
    <string name="european">European</string>
    <string name="asian">Asian</string>
</resources>
